--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Local session storage for Koa sessions",
   "main": "src/index.js",
   "scripts": {
+    "test": "node node_modules/mocha/bin/_mocha -- test/*",
     "lint": "eslint src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "coverage": "npm run lint && nyc --reporter=text mocha"
   },
   "repository": "jmitchell38488/koa-session-local",
   "keywords": [
@@ -35,12 +36,27 @@
     "node": ">= 7.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "assert": "^2.0.0",
+    "babel-jest": "^24.8.0",
+    "chai": "^4.2.0",
     "co-mocha": "^1.2.2",
+    "dirty-chai": "^2.0.1",
     "eslint": "^6.1.0",
     "eslint-plugin-node": "^9.1.0",
     "istanbul": "^0.4.5",
+    "koa": "^2.7.0",
+    "koa-session": "^5.12.2",
     "lint-staged": "^9.2.1",
     "mocha": "^6.2.0",
-    "should": "^13.2.3"
+    "nyc": "^14.1.1",
+    "should": "^13.2.3",
+    "sinon": "^7.4.1",
+    "sinon-chai": "^3.3.0"
+  },
+  "peerDependencies": {
+    "koa": ">=2.0.0",
+    "koa-session": ">=5.0.0"
   }
 }
