- Updated HISTORY.md - Updated README.md - Updated package.json
Information updates only

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jmitchell38488/koa-session-local",
+  "name": "koa-session-local",
   "version": "1.0.0",
   "description": "Local session storage for Koa sessions",
   "main": "src/index.js",
