Updated the build file for travis to execute 'npm test' and then 'npm nyc-coveralls' to push the coverage build to coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,11 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
+
+notifications:
+    email:
+        recipients:
+            - jmitchell38488@gmail.com
+
+script: "npm test"
+after_success: "npm run nyc-coverage"
